tests/valid/03_vars_lista.patito
programa varsLista;
vars
    a, b, c : entero;
    x, y : flotante;
inicio
{
}
fin
