tests/invalid/04_llave_desbalanceada.patito
programa llaveDesb;
vars
    x : entero;
inicio
{
    x = 1;

fin
